docs/style.css
/* ... */
#page-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100vh;
    padding: 10px;
    background-color: var(--bg-main);
    scroll-behavior: auto;
}


#auth-popup{
    border: var(--border);
    flex-direction: column;
    align-items: center;
    width: 50%;
    min-height: 400px;
    border-radius: var(--box-radius);
    padding: 20px;
    background-color:var(--bg-card);
    opacity: 1;
    display: none;
    max-width: 540px;
}

#login-wrapper{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 40px;
    opacity: 0;
    transition: opacity ease 0.2s;
    height: 100%;
}

#signup-wrapper{
    width: 100%;
    display: none;
    flex-direction: column;
    align-items: center;
    row-gap: 40px;
    opacity: 0;
    transition: opacity ease 0.2s;
}

.input-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    row-gap: 20px;
}

input, textarea{
    border-radius: 5px;
    border: 1px;
    height: 35px;
    padding: 5px;
    background-color: var(--bg-input);
}

input::placeholder{
    color: black;
}


.input-wrapper{
    width: 100%;
    display: flex;
    flex-direction: column;
    row-gap: 5px;
}

.multi-input-wrapper{
    width: 100%;
    display: flex;
    flex-direction: column;
    row-gap: 5px;
    height: 100%;
}

em{
    text-decoration: underline;
}

#signup-txt, #login-txt{
    cursor: pointer;
}

.auth-btns{
    display: flex;
    align-items: center;
    border-radius: var(--btn-radius);
    cursor: pointer;
    transition: all 0.3s ease;
    border: 1px solid var(--border);
    padding: 5px;
    font-weight: bold;
    letter-spacing: 1px;
    height: 40px;
    width: 100%;
    justify-content: center;
    max-width: 200px;
    border-radius: var(--btn-radius);
}

.auth-btns.validate{
    background-color: var(--bg-button-main);
    color: var(--text-button-validate);
}

.auth-btns.cancel{
    background-color: var(--bg-button-secondary);
    color: var(--accent);
}

.auth-btns.validate:hover{
    background-color: var(--bg-hover);
    color: var(--accent-hover);
}

.auth-btns.cancel:hover{
    background-color: var(--bg-button-main);
    color: white;
}

#login-btn{
    height: 62px;
}    
#signup-btn{
    height: 56px;
}


.error-message{
    color: red;
    display: none;
    opacity: 0;
}

#main-container{
    width: 70%;
    background-color: var(--bg-card);
    display: none;
    opacity: 0;
    padding: 20px;
    transition: 0.3s ease opacity;
    border-radius: 10px;
    height: 100%;
}

/* Profile section */
#profile-section, #forum-section, #search-section, #forum-message-section{
    width: 100%;
    display: none;
    opacity: 0;
    flex-direction: column;
    transition: 0.3s ease opacity;
    align-items: center;
}

#profile-section, #search-section, #forum-message-section{
    row-gap: 20px;
}

#forum-main-section{
    opacity: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 5px;
    justify-content: space-between;
    height: 100%;
    width: 100%;
}


#forum-message-section{
    overflow: scroll;
    scrollbar-width: none;
}

.profile-form-header{
    display: flex;
    flex-direction: row;
}

.profile-form-body{
    display: flex;
    flex-direction: column;
    row-gap: 20px;
}

.profile-image{
    align-self: center;
    border: 1px solid var(--border);
    border-radius: 50%;
    width: 150px;
    height: 150px;
}

.profile-image.check-profile{
    justify-self: center;
    aspect-ratio: 1;
}

.modify-img-label{
    opacity: 0;
}

.profile-multi-input{
    min-height: 70px;
}

#form-submit-btn, #profile-modify-btn{
    align-self: center;
}

#profile-infos{
    display: none;
    opacity: 0;
    transition: 0.3s ease opacity;
    flex-direction: column;
    row-gap: 60px;
    justify-content: space-between;
    height: 100%;
    width: 100%;
    align-items: center;
}

.info-text{
    font-size: var(--normal-text);
}

.info-title{
    font-size: var(--big-title);
}

.infos-body{
    display: flex;
    flex-direction: column;
    row-gap: 20px;
    border: 1px solid var(--border);
    background-color: var(--bg-main);
    width: 100%;
    border-radius: var(--box-radius);
    max-width: 540px;
    padding: 10px;
}



#profile-modify-form{
    display: none;
    opacity: 0;
    transition: 0.3s ease opacity;
    flex-direction: column;
    row-gap: 20px;
    width: 70%;
    justify-content: space-between;
    height: 100%;
    max-width: 540px;
}


#greeting{
    align-self: center;
}

#profil-img-uploader{
    align-self: center;
    border: 1px solid black;
}

#modify-profile-img, #profile-img, #check-profile-img{
    background-size: cover;
    background-position: center;
}

.flex-row-btns{
    display: flex;
    justify-content: space-between;
    column-gap: 40px;
}


#custom-uploader{
    padding: 0px 10px;
    border-radius: 5px;
    max-width: 70px;
    display: flex;
    justify-content: center;
    align-self: center;
    background-color: var(--accent);
    cursor: pointer;
    transition: all 0.3s ease;
    color: white;
    padding: 3px 10px;
    margin-top: 5px;
}

#custom-uploader:hover{
    background-color: var(--bg-hover);
    color: var(--accent-hover);
}

.navbar{
    display: flex;
    column-gap: 30px;
    padding: 10px;
    margin-bottom: 10px;
}

#navbar{
    display: none;
    opacity: 0;
}

.nav-menu{
    height: 100%;
    cursor: pointer;
}

.unselected:hover{
    color: gray;
}


.selected{
    border-bottom: 2px solid black;
    font-weight: bold;
    color: black;
    font-size: 18px;
}

ul{
    list-style: none;
}


/* ------ Forum ------ */

#forum-body{
    display: flex;
    height: 100%;
    flex-direction: column;
    row-gap: 10px;
    width: 100%;
    align-items: center;
    justify-content: center;
}
/* ... */

